Try to Make World Class

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,6 @@
         <button id="enterButton">Enter!</button>
     </div>
 
-    <canvas id="game-div"> </canvas>
+    <canvas id="game-canvas"> </canvas>
 </body>
 </html>
